--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
 
 
-    <h1 class="text-center">portfolio</h1>
+    <h1 class="text-center">nov portfolio</h1>
     <br>
     <br>
     <br>
